# ladybird

./: .clang-format  .gitignore  Cargo.toml  pyproject.toml  vcpkg.json
.github/ISSUE_TEMPLATE/: bug_report.yml
AK/: Debug.h.in  String.h
Libraries/LibGC/: CMakeLists.txt  Cell.h  Forward.h  Function.h  GCPtr.h  Handle.cpp  Handle.h  Heap.cpp  Heap.h  HeapBlock.h  HeapFunction.h  HeapRoot.h  NanBoxedValue.h
Libraries/LibIDL/: IDLParser.cpp  IDLParser.h  Types.cpp  Types.h
Libraries/LibIPC/: Decoder.cpp  Decoder.h  Encoder.cpp  Encoder.h  TransportMachPort.cpp  TransportMachPort.h
Libraries/LibJS/: AST.cpp  AST.h  CMakeLists.txt  Console.h  CyclicModule.h  Module.cpp  Module.h  ModuleLoading.h  RustIntegration.cpp  RustIntegration.h  Script.h  SourceTextModule.h  SyntheticModule.cpp  SyntheticModule.h
Libraries/LibRegex/: RustRegex.cpp
Libraries/LibTest/: JavaScriptTestRunner.h
Libraries/LibTextCodec/: CMakeLists.txt  RustIntegration.cpp
Libraries/LibTextCodec/Rust/: Cargo.toml  cbindgen.toml
Libraries/LibTextCodec/Rust/src/: ffi.rs  lib.rs
Libraries/LibURL/Rust/: Cargo.toml
Libraries/LibURL/Rust/src/: ffi.rs  lib.rs
Libraries/LibURL/Rust/src/ffi/: pattern.rs  url.rs
Libraries/LibURL/Rust/src/pattern/: canonicalization.rs  component.rs  constructor_string_parser.rs  init.rs  mod.rs  options.rs  part.rs  pattern.rs  pattern_error.rs  pattern_parser.rs  string.rs  tokenizer.rs
Libraries/LibURL/Rust/src/url/: host.rs  mod.rs  parser.rs  percent_encoding.rs  serialize.rs  types.rs
Utilities/: dump-html-tree.cpp  test262-runner.cpp
(+973 files in other folders)
